--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,7 +13,7 @@
     <div class="flex items-center justify-between">
       <!-- Logo -->
       <div class="text-2xl font-display font-bold cursor-pointer" (click)="scrollToSection('hero')">
-        <span class="text-gradient">Wilder Rojas</span>
+        <span class="text-gradient"> WR </span>
       </div>
 
       <!-- Desktop Menu -->
