--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
   <app-skills></app-skills>
   <app-projects></app-projects>
   <app-certifications></app-certifications>
+  <app-experience></app-experience>
   <app-blog></app-blog>
   <app-contact></app-contact>
 </main>
