--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   <app-projects></app-projects>
   <app-certifications></app-certifications>
   <app-experience></app-experience>
-  <app-blog></app-blog>
+  <!-- <app-blog></app-blog> -->
   <app-contact></app-contact>
 </main>
 <app-footer></app-footer>
