--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -71,12 +71,7 @@
           
           <!-- Profile Image Container -->
           <div class="relative w-64 h-64 md:w-80 md:h-80 lg:w-96 lg:h-96 rounded-full overflow-hidden border-8 border-white dark:border-gray-800 shadow-2xl">
-            <div class="w-full h-full bg-gradient-to-br from-primary-200 to-primary-400 dark:from-primary-800 dark:to-primary-600 flex items-center justify-center">
-              <!-- Placeholder for profile image -->
-              <svg class="w-32 h-32 md:w-40 md:h-40 text-white" fill="currentColor" viewBox="0 0 20 20">
-                <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd"/>
-              </svg>
-            </div>
+            <img src="assets/images/profilegit.png" alt="Profile" class="w-full h-full object-cover">
           </div>
         </div>
       </div>
