--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -14,10 +14,8 @@
         <div class="relative">
           <div class="absolute inset-0 bg-primary-500 rounded-2xl transform rotate-3"></div>
           <div class="relative bg-gradient-to-br from-primary-200 to-primary-400 dark:from-primary-800 dark:to-primary-600 rounded-2xl overflow-hidden shadow-2xl">
-            <div class="aspect-square flex items-center justify-center p-12">
-              <svg class="w-full h-full text-white opacity-50" fill="currentColor" viewBox="0 0 20 20">
-                <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd"/>
-              </svg>
+            <div class="aspect-square flex items-center justify-center">
+              <img src="assets/images/profile.png" alt="Profile" class="w-full h-full object-cover">
             </div>
           </div>
         </div>
